# url-shortener

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yml
.sqlx/: query-48763b99497926ed43559ca8a1af2baf4af721a202adf5a16fdb234cee6375d6.json  query-4fcb3ace08a64b44b03ebd8cf1cdb477b10aaff29f7610317bc9b7e2d5dfa2b0.json  query-591b24d7eba0566c462c67e5678b6ebd4507baf9238dc8a315a3784e470219fa.json  query-72d228359f4f821f95638e5336bf45ff2b51d9a56b38b2e8c483d669028cf022.json  query-9c3f0625d416ff9df82be466efcd879cf29daf550ab9e36687aa5658ff6aed27.json  query-a19d42f903f011d86dc4e13a5c8eaf2f4612c041c58f61dfd35a86905384bf23.json  query-aee288464ab8c3f199b7d1801ec77712d4c8332491639a0921aec842c4b69812.json  query-b61120c9d799bb224309bc603b158e92fc09d0b888a4883e35d1d907432de243.json  query-fe83a0beb62387078a644c4e645cdea11cb193e21265e6d5b38cdd9969703dfc.json
migrations/: 001_create_urls_table.sql  002_create_users_table.sql  003_add_favourites.sql
src/: app.rs  app_state.rs  main.rs
src/auth/: auth.rs
src/common/: constants.rs  errors.rs  mod.rs  response.rs
src/config/: config.rs
src/domains/: mod.rs
src/domains/auth/: models.rs
src/domains/urls/: service.rs
src/domains/users/: mod.rs  service.rs
src/handlers/: health.rs  urls.rs  users.rs
src/infra/: db.rs
src/infra/repositories/: mod.rs
src/middleware/: jwt.rs
src/urls/: dto.rs  handlers.rs  interface.rs  mod.rs  models.rs  repository.rs  routes.rs  service.rs
src/users/: dto.rs  handlers.rs  interface.rs  models.rs  repository.rs  routes.rs  service.rs
(+5 files in other folders)
