[package]
name = "url-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.88"
axum = {version = "0.8.3", features = ["macros", "json"] }
base64 = "0.22.1"
chrono = {version = "0.4.40", features = ["serde"]}
dotenv = "0.15.0"
http-serde = "2.1.1"
jsonwebtoken = "9.3.1"
md5 = "0.7.0"
mongodb = "3.2.3"
rand = "0.9.1"
regex = "1.11.1"
serde = {version = "1.0.219", features = ["derive"]}
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio",
    "runtime-tokio-native-tls",
    "macros",
    "uuid",
    "chrono",
    "json",
    "migrate"
] }
thiserror = "2.0.12"
tokio = {version = "1.44.2", features = ["full"]}
tower = {version="0.5.2", features = ["timeout"]}
tower-http = {version="0.6.2", features = ["cors"]}
tracing = "0.1.41"
url = "2.5.4"
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "time"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
uuid = {version = "1.16.0", features = ["v4"]}
